--- a/CMS_Diabetes.ipynb
+++ b/CMS_Diabetes.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5a111bc2-687c-457e-ac4d-c9e18886caed",
    "metadata": {
     "slideshow": {
@@ -105,15 +105,135 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mset_option(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdisplay.max_rows\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m15\u001b[39m)\n\u001b[1;32m      2\u001b[0m parm_CMSChronic_year \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2018\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      3\u001b[0m parm_CMSChronic_disease \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDiabetes\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>County</th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>Diabetes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Autauga</td>\n",
+       "      <td>01001</td>\n",
+       "      <td>31.0290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>01003</td>\n",
+       "      <td>23.5492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Barbour</td>\n",
+       "      <td>01005</td>\n",
+       "      <td>32.6483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Bibb</td>\n",
+       "      <td>01007</td>\n",
+       "      <td>32.6255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Blount</td>\n",
+       "      <td>01009</td>\n",
+       "      <td>28.6635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3247</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Sweetwater</td>\n",
+       "      <td>56037</td>\n",
+       "      <td>21.7601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3248</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Teton</td>\n",
+       "      <td>56039</td>\n",
+       "      <td>9.6583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3249</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Uinta</td>\n",
+       "      <td>56041</td>\n",
+       "      <td>22.5342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3251</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Washakie</td>\n",
+       "      <td>56043</td>\n",
+       "      <td>23.0028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3252</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Weston</td>\n",
+       "      <td>56045</td>\n",
+       "      <td>20.5758</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3146 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         State       County    FIPS  Diabetes\n",
+       "3     Alabama      Autauga   01001    31.0290\n",
+       "4     Alabama      Baldwin   01003    23.5492\n",
+       "5     Alabama      Barbour   01005    32.6483\n",
+       "6     Alabama         Bibb   01007    32.6255\n",
+       "7     Alabama       Blount   01009    28.6635\n",
+       "...        ...          ...     ...       ...\n",
+       "3247  Wyoming   Sweetwater    56037   21.7601\n",
+       "3248  Wyoming        Teton    56039    9.6583\n",
+       "3249  Wyoming        Uinta    56041   22.5342\n",
+       "3251  Wyoming     Washakie    56043   23.0028\n",
+       "3252  Wyoming       Weston   56045    20.5758\n",
+       "\n",
+       "[3146 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -140,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "id": "778415bf-8d7f-4aff-9a01-650cc521376b",
    "metadata": {
     "slideshow": {
@@ -152,7 +272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23acb5d4a8204ba19734184076742165",
+       "model_id": "9e3d7e0197f545dfaf7babfa8878f426",
        "version_major": 2,
        "version_minor": 0
       },
